<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">mReader</string>
    <string name="app_name">mReader</string>

    <!-- 主菜单定义 -->
    <string name="main_txt_title">mReader</string>
    <string name="main_btn_open">Open</string>
    <string name="main_btn_setting">Setting</string>
    <string name="main_btn_exit">Exit</string>

    <!-- 用户设定定义 -->
    <string name="setting_txt_title">User Setting</string>
    <string name="setting_txt_font_color">Font Color</string>
    <string name="setting_txt_bg_color">Background Color</string>
    <string name="setting_txt_font_size">Font Size</string>
    <string name="setting_txt_scr_brightness">Screen Brightness</string>
    <string name="setting_txt_setting_prev">A testing message.</string>

    <!-- 书签管理定义 -->
    <string name="bookmark_txt_title">Bookmark Manager</string>
    <string name="bookmark_btn_add">Add Bookmark</string>
    <string name="bookmark_btn_clear">Remove Bookmark</string>
    <string name="bookmark_btn_go">Go To Bookmark</string>

    <!-- 版本 -->
    <string name="version_txt_title">About mReader</string>
    <string name="version_txt_first">Author: J Group</string>
    <string name="version_txt_second"></string>
    <string name="version_txt_third">Version 1.0</string>
    <string name="version_txt_fourth">©Copyright 2016 J Group</string>
    <string name="version_txt_fifth">ALL rights reserved</string>
    

</resources>